backend/k8s/overlays/staging/thumb-worker-kafka-topic-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thumb-worker
spec:
  template:
    spec:
      containers:
      - name: thumb-worker
